[package]
name = "battle-cats-normal-rolls"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8.9"
rayon = "1.12.0"
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs"] }

